# Flashcard

./: .gitignore  Gemfile  LICENSE  Procfile  README.md  docker-compose.yml  flashcard.cabal  stack.yaml
app/: Main.hs
data/: schema.sql
db/: config.yml  schema.rb  seeds.rb
db/migrate/: 20180422142230_create_health.rb  20180422142230_create_healths.rb  20180424110554_create_some_tables.rb
frontend/: .eslintrc.js  .gitignore  elm-analyse.json  elm-package.json  package-lock.json  package.json  webpack.config.js
frontend/src/: Main.elm  Message.elm  Messages.elm  Model.elm  Models.elm  Routing.elm  Update.elm  Util.elm  View.elm  index.html  index.js
frontend/src/Books/: Commands.elm  Detail.elm  List.elm  Messages.elm  Models.elm  Update.elm
frontend/src/Healths/: Commands.elm  Messages.elm  Models.elm  Update.elm  View.elm
src/: DataSource.hs  Util.hs
src/Entity/: Book.hs  Health.hs  Page.hs  User.hs
src/Model/: Book.hs  Health.hs  Page.hs
src/Web/: Flashcard.hs
