name:               flashcard
version:            0.1.0.0
homepage:           https: //github.com/hioki-daichi/flashcard
license:            BSD3
license-file:       LICENSE
author:             Daichi Hioki
maintainer:         hiokidaichi@gmail.com
copyright:          2018 Daichi Hioki
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5

executable flashcard
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , flashcard
                  , Spock
                  , aeson
                  , time
                  , text
