name:               flashcard
version:            0.1.0.0
homepage:           https: //github.com/hioki-daichi/flashcard
license:            BSD3
license-file:       LICENSE
author:             Daichi Hioki
maintainer:         hiokidaichi@gmail.com
copyright:          2018 Daichi Hioki
category:           Web
build-type:         Simple
extra-source-files: README.md
cabal-version:      >=1.10

library
  hs-source-dirs:   src
  exposed-modules:  Entity.Health
                  , Entity.User
                  , Entity.Book
                  , Entity.Page
                  , Model.Health
                  , Model.Book
                  , Model.Page
                  , Web.Flashcard
                  , DataSource
                  , Util
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , text
                  , Spock
                  , http-types
                  , HDBC
                  , HDBC-session
                  , HDBC-postgresql
                  , relational-query
                  , relational-query-HDBC
                  , sql-words
                  , aeson
                  , time

executable flashcard
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:      -Wall
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , flashcard
